force-app/main/default/objects/Int_OFAC_FINCEN__c/Int_OFAC_FINCEN__c.object-meta.xml
<CustomObject>
    <label>Int OFAC_FINCEN</label>
    <nameField>
        <displayFormat>FC-{00000000}</displayFormat>
        <label>Int OFAC FINCEN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int OFAC FINCEN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>