force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Additional_Info_3__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_3__c</fullName>
    <label>Additional Info 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>