force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Billing_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Building_Number__c</fullName>
    <label>Billing Building Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>