force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <label>Billing State Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>