force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Billing_Unit_Suite_Apt__c.field-meta.xml
<CustomField>
    <fullName>Billing_Unit_Suite_Apt__c</fullName>
    <label>Billing Unit Suite Apt</label>
    <length>20</length>
    <type>Text</type>
</CustomField>