force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Equipment_City__c.field-meta.xml
<CustomField>
    <fullName>Equipment_City__c</fullName>
    <label>Equipment City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>