force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Equipment_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Postal_Code__c</fullName>
    <label>Equipment Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>