force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Equipment_Unit_Suite_Apt__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Unit_Suite_Apt__c</fullName>
    <label>Equipment Unit Suite Apt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>