force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Generation__c.field-meta.xml
<CustomField>
    <fullName>Generation__c</fullName>
    <label>Generation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>