force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <length>10</length>
    <type>Text</type>
</CustomField>