force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Primary_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Line_1__c</fullName>
    <label>Primary Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>