force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Primary_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_City__c</fullName>
    <label>Primary City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>