force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Primary_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Country__c</fullName>
    <label>Primary Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>