force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Primary_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Primary_State_Province__c</fullName>
    <label>Primary State Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>