force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Primary_Unit_Suite_Apt__c.field-meta.xml
<CustomField>
    <fullName>Primary_Unit_Suite_Apt__c</fullName>
    <label>Primary Unit Suite Apt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>