force-app/main/default/objects/Int_OFAC_FINCEN__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <length>20</length>
    <type>Text</type>
</CustomField>